[gd_scene load_steps=4 format=3 uid="uid://npc8typo0va5"]

[ext_resource type="Script" path="res://scripts/config.gd" id="1_l5vau"]
[ext_resource type="Texture2D" uid="uid://dj6dapnlhmkhy" path="res://assets/close.png" id="2_ihpwa"]
[ext_resource type="Texture2D" uid="uid://bhyo1esocburd" path="res://icon.svg" id="3_pwxtm"]

[node name="Config" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.12549, 0.12549, 0.627451)
script = ExtResource("1_l5vau")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="Center"]
custom_minimum_size = Vector2(365, 230)
layout_mode = 2

[node name="Close" type="Button" parent="Center/Panel"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
icon = ExtResource("2_ihpwa")
expand_icon = true

[node name="margin" type="MarginContainer" parent="Center/Panel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="cont" type="HBoxContainer" parent="Center/Panel/margin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ConfigList" type="ItemList" parent="Center/Panel/margin/cont"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 0
item_count = 3
item_0/text = "Conexi√≥n"
item_1/text = "Perfil"
item_2/text = "Personalizaci√≥n"

[node name="Connect" type="VBoxContainer" parent="Center/Panel/margin/cont"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="IPbox" type="HBoxContainer" parent="Center/Panel/margin/cont/Connect"]
layout_mode = 2

[node name="Label" type="Label" parent="Center/Panel/margin/cont/Connect/IPbox"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "IP:"

[node name="LineEdit" type="LineEdit" parent="Center/Panel/margin/cont/Connect/IPbox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "localhost"

[node name="Portbox" type="HBoxContainer" parent="Center/Panel/margin/cont/Connect"]
layout_mode = 2

[node name="Label" type="Label" parent="Center/Panel/margin/cont/Connect/Portbox"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "Port:"

[node name="LineEdit" type="LineEdit" parent="Center/Panel/margin/cont/Connect/Portbox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "7001"

[node name="Host" type="Button" parent="Center/Panel/margin/cont/Connect"]
layout_mode = 2
size_flags_horizontal = 3
text = "Crear"

[node name="Connect" type="Button" parent="Center/Panel/margin/cont/Connect"]
layout_mode = 2
size_flags_horizontal = 3
text = "Conectar
"

[node name="Perfil" type="VBoxContainer" parent="Center/Panel/margin/cont"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Center/Panel/margin/cont/Perfil"]
layout_mode = 2
text = "Tu perfil:"

[node name="Photo" type="TextureRect" parent="Center/Panel/margin/cont/Perfil"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Haz clic para cambiar la foto de perfil"
texture = ExtResource("3_pwxtm")
expand_mode = 1
stretch_mode = 5

[node name="Name" type="LineEdit" parent="Center/Panel/margin/cont/Perfil"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "Introduce tu nombre"
alignment = 1

[node name="Control" type="Control" parent="Center/Panel/margin/cont/Perfil"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Color" type="HBoxContainer" parent="Center/Panel/margin/cont/Perfil"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Center/Panel/margin/cont/Perfil/Color"]
layout_mode = 2
text = "Color:"

[node name="ColorPicker" type="ColorPickerButton" parent="Center/Panel/margin/cont/Perfil/Color"]
layout_mode = 2
text = "color"
color = Color(1, 1, 1, 1)
edit_alpha = false

[node name="Randomize" type="Button" parent="Center/Panel/margin/cont/Perfil/Color"]
custom_minimum_size = Vector2(31, 0)
layout_mode = 2
tooltip_text = "Escoger un color aleatorio"
text = "R"

[node name="WelcomeScreen" type="Window" parent="."]
title = "Bienvenido a LANChat"
initial_position = 1
size = Vector2i(500, 370)
visible = false

[node name="ColorRect" type="ColorRect" parent="WelcomeScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="MarginContainer" type="MarginContainer" parent="WelcomeScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="RichTextLabel" type="RichTextLabel" parent="WelcomeScreen/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]¬°Bienvenido a LANChat![/center]


	Parece que es la primera vez que usas este programa. LANChat es una aplicaci√≥n de mensajer√≠a para redes locales, creada por Satoshi en Godot, con amor para Airi y Santiago ‚ô•

Para usarla, debes conectarte a una red de √°rea local (LAN). Entonces debes elegir dos modos: puedes crear tu propio chat o unirte a un chat existente.

	üëâ Para crear tu propio chat, escribe el puerto en la casilla \"Puerto\" (casi siempre es mejor dejar el puerto por defecto) y a continuaci√≥n haz clic en Crear. La casilla IP no se usa aqu√≠

	üëâ Para conectarte a un chat, debes escribir la direcci√≥n IP del usuario que cre√≥ el chat (NO la que aparece en su casilla IP, sino su direcci√≥n en la red local, que puede verse en las configuraciones de la red) y el puerto que este seleccion√≥ (ahora s√≠, el que le aparece en el programa). Una vez hecho esto, haz clic en Conectar

Puedes acceder a las configuraciones desde la interfaz principal tocando el bot√≥n de engranaje ‚öô a la derecha de la barra superior. A la izquierda de esta, los botones Crear y Conectar te permiten conectarte r√°pidamente. No olvides configurar tu nombre de usuario, tu color y la foto de perfil con la que te ver√°n los intengrantes del chat. En LANChat, el color de usuario es p√∫blico, lo que quiere decir que todos te ver√°n con el color que seleccionaste.

[center]¬°Buena suerte y disfruta de LANChat![/center]"

[connection signal="pressed" from="Center/Panel/Close" to="." method="_on_close_pressed"]
[connection signal="item_selected" from="Center/Panel/margin/cont/ConfigList" to="." method="_on_config_list_item_selected"]
[connection signal="pressed" from="Center/Panel/margin/cont/Connect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Center/Panel/margin/cont/Connect/Connect" to="." method="_on_connect_pressed"]
[connection signal="gui_input" from="Center/Panel/margin/cont/Perfil/Photo" to="." method="_on_photo_gui_input"]
[connection signal="text_submitted" from="Center/Panel/margin/cont/Perfil/Name" to="." method="_on_name_text_submitted"]
[connection signal="color_changed" from="Center/Panel/margin/cont/Perfil/Color/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="pressed" from="Center/Panel/margin/cont/Perfil/Color/Randomize" to="." method="_on_randomize_pressed"]
[connection signal="close_requested" from="WelcomeScreen" to="." method="_on_welcome_screen_close_requested"]
